# ice_cube

./: .gitignore  README.md  index.html  next.md  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.json  tsconfig.node.json  ui.config.json  vite.config.ts
src/: App.tsx  Router.tsx  index.css  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  mobile.json
src-tauri/src/: lib.rs  main.rs
src/component/: ComBookCard.tsx  ComFilterCard.tsx  ComModalReciteSetting.tsx  ComRecite.tsx  ComReciteHide.tsx  ComReciteShow.tsx  ComWordList.tsx
src/components/ui/: combobox.tsx
src/page/: PageAddWord.tsx  PageCreateFilter.tsx  PageFilterList.tsx  PageHome.tsx  PageLoad.tsx  PageLoading.tsx  PageParse.tsx  PageRecite.tsx  PageRoot.tsx
src/page/PageHome/: PageDebug.tsx  PageGate.tsx  PageMyself.tsx  ViewHome.tsx  ViewSetting.tsx
src/page/PageRoot/: PageCreateBook.tsx  PageCreateFilter.tsx  PageHome.tsx  PageParse.tsx  PageRecite.tsx  PageWatchWordList.tsx
src/serve_app/: filter.ts  icons.ts  parse.ts  premake_book_list.ts  store.ts  theme.ts  translation.ts  word.ts  word_book_lists.ts
src/serve_app/sotre/: store_book.ts
src/serve_app/sotre_data/: sotre_book_data.ts  sotre_filter.ts  sotre_setting.ts  sotre_time.ts  store_book_golbal.ts  store_translation_buffer.ts  (+1 more)
src/tool/: a.json  auxiliary_fn.ts  condiction.ts  data_import_export.ts  debug.ts  filter.ts  fs.ts  number.ts  option.ts  parse.ts  premake_book_list.ts  proxy.ts  random.ts  result.ts  store.ts  time.ts  translation.ts  word.ts
(+11 files in other folders)
